testdata/baselines/reference/submodule/conformance/constructorFunctionsStrict.errors.txt
a.js(2,12): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(8,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
a.js(13,12): error TS7006: Parameter 'x' implicitly has an 'any' type.
a.js(15,16): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
a.js(20,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== a.js (5 errors) ====
    /** @param {number} x */
    function C(x) {
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        this.x = x
    }
    C.prototype.m = function() {
        this.y = 12
    }
    var c = new C(1)
            ~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    c.x = undefined // should error
    c.y = undefined // ok
    
    /** @param {number} x */
    function A(x) {
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        if (!(this instanceof A)) {
            return new A(x)
                   ~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
        }
        this.x = x
    }
    var k = A(1)
    var j = new A(2)
            ~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    k.x === j.x
    